base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pocketbase.example.com
      secretName: pocketbase-cert
  rules:
    - host: pocketbase.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketbase
                port:
                  number: 8090
